<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center_horizontal"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
       android:contentDescription="@string/image_of_coffee"
        android:src="@drawable/coffeeimage"
        android:layout_gravity="center"
        android:padding="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_coffee"
        android:textSize="20sp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/coffeeType"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="Coffee Type"
        android:inputType="text"
        android:hint="@string/coffeeTypeHint"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_on_order"
        android:textSize="20sp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="Name"
        android:inputType="text"
        android:hint="@string/nameHint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/type_of_shipping"
        android:textSize="20sp"
        />
    <RadioGroup
        android:id="@+id/shipping"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/express_shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/express_shipping_2_minutes"
            />
        <RadioButton
            android:id="@+id/standard_shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standard_shipping_20_minutes"
            />
        <RadioButton
            android:id="@+id/pickup_shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup_your_order"
            />
    </RadioGroup>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_your_order"
        />



</LinearLayout>